# score

./: .travis.yml  Cargo.toml  LICENSE-MIT  README.md
examples/: bad.tsv  good.tsv  invalid1.tsv  invalid2.tsv
file_examples/: bad.tsv  good.tsv  invalid.tsv  solution1.tsv  solution1.tsv.xz
src/: cli.rs  consts.rs  main.rs  read.rs  score.rs
